--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    // Docker images officially provided by Microsoft that can utilized as base images
+    // Docker images officially provided by Microsoft that can be utilized as base images
     // https://hub.docker.com/_/microsoft-vscode-devcontainers
     "name": "Tools for building and running Go projects",
     "image": "mcr.microsoft.com/vscode/devcontainers/go:1.21",
