--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,7 +1,7 @@
-name: Workflow for release packages
+name: Workflow for dev packages
 
 on:
-  push:
+  pull_request:
     branches: [main]
 
 jobs:
@@ -26,4 +26,4 @@ jobs:
 
       # Run static code analysis on source code
       # Run vulnerability scanner and generate SBOMs on third part dependencies
-      # Create build artifacts, e.g. Build docker image with release tag for applications, scan docker image and push to container registry
+      # # Create build artifacts, e.g. Build docker image with dev tag for applications and push to container registry
