--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -1,4 +1,4 @@
-name: Workflow for release packages
+name: Workflow for pre-release packages
 
 on:
   push:
@@ -26,4 +26,4 @@ jobs:
 
       # Run static code analysis on source code
       # Run vulnerability scanner and generate SBOMs on third part dependencies
-      # Create build artifacts, e.g. Build docker image with release tag for applications, scan docker image and push to container registry
+      # Create build artifacts, e.g.  Build docker image with pre-release tag for applications, scan docker image and push to container registry
