--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -12,14 +12,24 @@ jobs:
 
     - name: Checkout repository
       uses: actions/checkout@v3
-      
-    - name: Echo
-      run: echo "TBD"
 
-    # - name: Check diffs
-    #   run: |
-    #     status=$(git status --porcelain=v1)
-    #     if [[ -n "$status" ]]; then
-    #       git diff
-    #       exit 1
-    #     fi
+    - name: Setup Go 1.21.x 🐹
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.21.x'
+
+    - name: Install golangci-lint package 📦
+      run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+      
+    - name: Auto-format and lint Go
+      run: |
+        ./format-and-lint.sh
+      working-directory: ./scripts
+
+    - name: Check diffs
+      run: |
+        status=$(git status --porcelain=v1)
+        if [[ -n "$status" ]]; then
+          git diff
+          exit 1
+        fi
