--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -16,12 +16,16 @@ jobs:
         with:
           go-version: '1.21.x'
 
+      - name: Grant execute permissions
+        run: chmod +x *
+        working-directory: ./scripts
+
       - name: Run Unit tests
         run: ./run-test.sh -u
         working-directory: ./scripts
 
       # - name: Run Integration tests
-      #   run: ./run-test.sh -i
+      #   run: sudo ./run-test.sh -i
       #   working-directory: ./scripts
 
       # Run static code analysis on source code
