--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,5 +5,6 @@
     "image": "mcr.microsoft.com/vscode/devcontainers/go:1.21",
     // Features to add to the dev container. More info: https://containers.dev/features
     "features": {},
+    "postCreateCommand": "apt-get update && apt-get install -y opensc softhsm",
     "remoteUser": "root"
 }
