--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,6 @@
     "image": "mcr.microsoft.com/vscode/devcontainers/go:1.21",
     // Features to add to the dev container. More info: https://containers.dev/features
     "features": {},
-    "postCreateCommand": "apt-get update && apt-get install -y openssl opensc softhsm",
+    "postCreateCommand": "apt-get update && apt-get install -y openssl opensc softhsm libssl-dev libengine-pkcs11-openssl",
     "remoteUser": "root"
 }
