--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       - "10002:10002"
     volumes:
       - azurite-data:/data
+    command: ["azurite", "--skipApiVersionCheck", "--blobHost", "0.0.0.0"]
     restart: on-failure
   
 volumes:
