add action for shutting down containters

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -40,6 +40,10 @@ jobs:
         run: sudo ./run-test.sh -i
         working-directory: ./scripts
 
+      - name: Shut down external storage services
+        run: |
+          docker compose down -v
+
       # Run static code analysis on source code
       # Run vulnerability scanner and generate SBOMs on third part dependencies
       # # Create build artifacts, e.g. Build docker image with dev tag for applications and push to container registry
