--- a/configs/qas.yml
+++ b/configs/qas.yml
@@ -1,7 +1,7 @@
 database:
   type: "postgres" 
   dsn: "user=postgres password=postgres host=localhost port=5432 sslmode=disable"
-  database_name: "blobs"
+  name: "blobs"
 
 blob_connector:
   cloud_provider: "azure"
