adjust env vars to align with mapstructure values

--- a/crypto-vault-service.env
+++ b/crypto-vault-service.env
@@ -2,9 +2,9 @@
 PORT=8080
 
 # Database Configuration
-DB_TYPE=postgres
-DB_DSN="user=postgres password=postgres host=localhost port=5432 sslmode=disable"
-DB_NAME=meta
+DATABASE_TYPE=postgres
+DATABASE_DSN="user=postgres password=postgres host=localhost port=5432 sslmode=disable"
+DATABASE_NAME=meta
 
 # Blob Connector Configuration
 BLOB_CONNECTOR_CLOUD_PROVIDER=azure
