modify api and cmd folder structure enabling gRPC APIs to be implemented

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
-  crypto-vault-service:
-    image: crypto-vault-service:0.1.0
+  crypto-vault-rest-service:
+    image: crypto-vault-rest-service:0.1.0
     build:
       context: .
-      dockerfile: cmd/crypto-vault-service/Dockerfile
+      dockerfile: cmd/crypto-vault-rest-service/Dockerfile
     env_file:
       - ./crypto-vault-service.env
     ports:
