expose ports in Dockerfile and setup gRPC service in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,21 @@ services:
       - postgres
       - azure-blob-storage
     restart: on-failure
+  
+  crypto-vault-grpc-service:
+    image: crypto-vault-grpc-service:0.1.0
+    build:
+      context: .
+      dockerfile: cmd/crypto-vault-grpc-service/Dockerfile
+    env_file:
+      - ./crypto-vault-grpc-service.env
+    ports:
+      - "8090:8090/tcp"
+      - "50051:50051/tcp"
+    depends_on:
+      - postgres
+      - azure-blob-storage
+    restart: on-failure
     
   postgres: 
     image: postgres
