--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,6 @@
     "features": {
         "ghcr.io/devcontainers/features/docker-in-docker:2": {},
     },
-    "postCreateCommand": "./install.sh",
+    "postCreateCommand": "bash .devcontainer/install.sh",
     "remoteUser": "root"
 }
