--- a/cmd/crypto-vault-grpc-service/Dockerfile
+++ b/cmd/crypto-vault-grpc-service/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 RUN apk update
 COPY . .
 RUN go mod tidy
-RUN go build -o crypto_vault_service ./cmd/crypto-vault-grpc-service/crypto_vault_service.go
+RUN go build -o crypto-vault-grpc-service ./cmd/crypto-vault-grpc-service/main.go
 
 # Serve stage
 FROM alpine:latest
@@ -14,9 +14,9 @@ FROM alpine:latest
 WORKDIR /root/
 
 RUN apk update && apk add --no-cache libc6-compat
-COPY --from=build /app/crypto_vault_service .
+COPY --from=build /app/main .
 
 EXPOSE 8090
 EXPOSE 50051
 
-ENTRYPOINT ["./crypto_vault_service"]
+ENTRYPOINT ["./crypto-vault-grpc-service"]
