--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -18,8 +18,10 @@ jobs:
       with:
         go-version: '1.23.x'
 
-    - name: Install golangci-lint package 📦
-      run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+    - name: Install packages for with tools for auto-formatting and linting  📦
+      run: |
+        go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+        go install golang.org/x/tools/cmd/goimports@latest
       
     - name: Grant execute permissions
       run: chmod +x *
