--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -22,6 +22,15 @@ jobs:
       run: |
         go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
         go install golang.org/x/tools/cmd/goimports@latest
+
+    - name: Install APT packages
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y shfmt
+    
+    - name: Install Prettier globally
+      run: |
+        sudo npm install -g prettier
       
     - name: Grant execute permissions
       run: chmod +x *
