--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
     // Docker images officially provided by Microsoft that can be utilized as base images
     // https://hub.docker.com/_/microsoft-vscode-devcontainers
-    "name": "Tools for building and running Go projects",
+    "name": "Go project tools",
     "image": "mcr.microsoft.com/vscode/devcontainers/go:1.23",
     // Features to add to the dev container. More info: https://containers.dev/features
     "features": {
