--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install apt dependencies for integration test
         run: |
           sudo apt-get update
-          sudo apt-get install -y openssl opensc softhsm libssl-dev libengine-pkcs11-openssl
+          sudo apt-get install -y openssl opensc softhsm libssl-dev libengine-pkcs11-openssl bc
 
       - name: Run Unit and Integration tests
         run: sudo ./run-test.sh -a
