--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install APT packages
       run: |
         sudo apt-get update
-        sudo apt-get install -y shfmt
+        sudo apt-get install -y shfmt make
     
     - name: Install Prettier globally
       run: |
@@ -37,9 +37,7 @@ jobs:
       working-directory: ./scripts
 
     - name: Auto-format and lint Go
-      run: |
-        ./format-and-lint.sh
-      working-directory: ./scripts
+      run: make format-and-lint
 
     - name: Check diffs
       run: |
