Fix: Code coverage below 70 percent (#36)
* Ensure unit and integration tests adhere to idiomatic naming conventions such as <component>_test.go and integration test files named <component>_integration_test.go
* Followed Go naming conventions by removing the I prefix from interfaces and making the structs that implement them private by default, e.g. type SomeService interface {} and type someService struct {}. This ensures that in this example, someService objects can only be created through the func NewSomeService(...) -> *someService function
* Added a Make target to verify that code coverage meets the 70% threshold across unit and integration tests
* Consolidated standalone scripts into dedicated Make targets for running unit, integration and end-to-end tests
* Resolved findings from various linters, including errcheck, govet, staticcheck, wrapcheck, importas, unused, ineffassign, errorlint, gocritic, gosec, misspell and nakedret
Removed
* Removed obsolete .vscode/launch.json

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -26,20 +26,14 @@ jobs:
     - name: Install APT packages
       run: |
         sudo apt-get update
-        sudo apt-get install -y shfmt
+        sudo apt-get install -y shfmt make
     
     - name: Install Prettier globally
       run: |
         sudo npm install -g prettier
-      
-    - name: Grant execute permissions
-      run: chmod +x *
-      working-directory: ./scripts
 
     - name: Auto-format and lint Go
-      run: |
-        ./format-and-lint.sh
-      working-directory: ./scripts
+      run: make format-and-lint
 
     - name: Check diffs
       run: |
